--- a/index.html
+++ b/index.html
@@ -7,6 +7,39 @@
     <title>Document</title>
 </head>
 <body>
-    <div></div>
+    <script>
+        var last_update = 0;
+        var x,y,z, last_x = 0, last_y = 0; last_z = 0;
+        function deviceMotionHandler(eventData){
+           //获取重力加速x,x,y的集合
+            var acceleration = evnetData.accelerationIncludingGravity;
+            var cuiTime = new Date().getTime();
+            //新的时间和上次时间的差值超过300
+            if((cuiTime - last_update) > 300){
+                //新的时间和上次时间的差值
+                var diffTime = curTime - last_update;
+                //老的时间等于新的时间
+                last_update = curTime;
+                 //拿到最新的x,y,z的数据
+                x = acceleration.x;
+                y = acceleration.y;
+                z = acceleration.z;
+                //三个方向的新数据- 老三个方向的数据得到的绝对值除以 俩次数据的时间差 
+                var data = Math.abs(x + y + z - last_x - last_y - last_z) / diffTime;
+               
+                var speed = Math.abs(x + y + z - last_x - last_y - last_z) / diffTime * 10000;
+                //数值超过了标准,代表你摇了
+                if(speed > 800 ){
+                    var div = document.createElement('div');
+                    div.innerText = data + '';
+                    document.body.appendChild(div);
+                    alert('摇了')
+                }
+                last_x = x;
+                last_y = y;
+                last_z = z;
+            }
+        }
+    </script>
 </body>
 </html>
