--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 var div = document.createElement('div');
                     div.innerText = data + '';
                     document.body.appendChild(div);
+                    document.body.innerHTML = data;
                 var speed = Math.abs(x + y + z - last_x - last_y - last_z) / diffTime * 10000;
                 //数值超过了标准,代表你摇了
                 if(speed > 800 ){
