--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
                     var div = document.createElement('div');
                     div.innerText = '11';
                     document.body.appendChild(div);
+                }else{
+                    alert('没效果')
                 }
                 last_x = x;
                 last_y = y;
